# RayTracing

./: .gitignore  CMakeLists.txt  README.md  camera.h  color.h  hittable.h  hittable_list.h  main.cpp  material.h  output.ppm  sphere.h  vec3.h
Header/: aabb.h  camera.h  scene.h  vec3.h
header/: ray.h  scene.h
header-tmp/: rtutils.h
src/: main.cpp  output.ppm
